# server/Component.php
@@ -12,19 +12,35 @@ use OpenApi\Attributes\JsonContent;
 #[Components(
     schemas: [
 
-        // StreamEvents
-
         new Schema(
-            schema: 'StreamEventsData',
-            required: ['data'],
+            schema: 'BodyData',
             properties: [
                 new Property(
                     property: 'data',
-                    ref: '#/components/schemas/StreamEvents',
                     type: 'object',
                 ),
             ],
             type: 'object',
+            anyOf: [
+                new Schema(
+                    ref: '#/components/schemas/StreamEventsData',
+                    type: 'object',
+                ),
+            ],
+        ),
+
+        new Schema(
+            schema: 'StreamEventsData',
+            type: 'array',
+            items: new Items(
+                properties: [
+                    new Property(
+                        property: 'data',
+                        ref: '#/components/schemas/StreamEvents',
+                        type: 'object',
+                    ),
+                ]
+            ),
         ),
 
         new Schema(
@@ -59,6 +75,7 @@ use OpenApi\Attributes\JsonContent;
             type: 'object',
             additionalProperties: true,
         ),
+
         new Schema(
             schema: 'StreamEventHeaders',
             required: [
@@ -104,15 +121,26 @@ use OpenApi\Attributes\JsonContent;
 
         new Schema(
             schema: 'ValidationError',
-            properties: [
-                new Property(property: 'message', type: 'string'),
-                new Property(property: 'errors', type: 'array', items: new Items(type: 'string')),
-                new Property(property: 'code', type: 'integer'),
-            ],
-            type: 'object',
+            type: 'array',
+            items: new Items(
+                properties: [
+                    new Property(property: 'message', type: 'string'),
+                    new Property(property: 'errors', type: 'array', items: new Items(type: 'string')),
+                    new Property(property: 'code', type: 'integer'),
+                ],
+            ),
         ),
     ],
     responses: [
+        new Response(
+            response: 'StreamEvents',
+            description: 'Stream events',
+            content: new JsonContent(
+                ref: '#/components/schemas/BodyData',
+                type: 'object',
+            )
+        ),
+
         new Response(
             response: 400,
             description: 'Bad request',
